--- a/nutrisite-www/src/App.css
+++ b/nutrisite-www/src/App.css
@@ -88,8 +88,31 @@ button {
   background-color:  #7d7171eb;
 }
 
+button:disabled {
+    background-color:  #7d7171eb;
+  cursor: not-allowed;
+}
+
+.spinner {
+    border: 2px solid rgba(0, 0, 0, 0.1);
+    border-left-color:#4CAF50;
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    animation: spin 1s linear infinite;
+    display: inline-block;
+    margin-right: 8px;
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
 input {
   background-color: #f0f0f05a;
+  color: #242424;
 }
 
 .error {
@@ -201,54 +224,4 @@ input {
 
 .form-group {
   flex-direction: column;
-}
-
-.daily-meals {
-  margin-top: 20px;
-  text-align: left;
-  background-color: #fff;
-  padding: 20px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  color: #242424;
-  border-radius: 8px;
-  max-width: 800px;
-  margin: 20px auto;
-}
-
-.daily-meals h2 {
-  font-size: 1.5em;
-  margin-bottom: 10px;
-}
-
-.totals {
-  margin-bottom: 20px;
-}
-
-.meal {
-  margin-bottom: 20px;
-}
-
-.meal p {
-  margin: 5px 0;
-}
-
-.meal-image {
-  max-width: 100%;
-  max-height: 300px;
-  border-radius: 8px;
-  margin-top: 10px;
-}
-
-@media (max-width: 600px) {
-  .daily-meals {
-    padding: 15px;
-  }
-
-  .daily-meals h2 {
-    font-size: 1.2em;
-  }
-
-  .daily-meals p, .meal p {
-    font-size: 0.9em;
-  }
 }
